--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Jared Todo List</title>
+<title>Jared is Cool</title>
 <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-    <h1>Todo List</h1>
+    <h1>Jared Is Super Rad!</h1>
+    <h2>About Me:</h2>
+    <p>I am Jared Martin. I am a Senior at [REDACTED]. My address is [REDACTED]. My debit card number is [REDACTED]. My social security number is [REDACTED]. 
+
+    </p>
+    <h2>My Hobbies</h2>
     <ul>
-        <li>Kick booty</li>
-        <li>Take names</li>
+        <li>Playing video games</li>
+        <li>Reading books</li>
+        <li>Throwing yoyos</li>
+        <li>Collecting Transformers</li>
+        <li>Tocar la guitarra</li>
     </ul>
+    
 </body>
 
 
