--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <h1>Jared Is Super Rad!</h1>
     <h2>About Me:</h2>
-    <p>I am Jared Martin. I am a Senior at [REDACTED]. My address is [REDACTED]. My debit card number is [REDACTED]. My social security number is [REDACTED]. 
+    <p>I am Jared Martin. I am a Senior at Flour Bluff High School. My address is [REDACTED]. My debit card number is [REDACTED]. My social security number is [REDACTED]. 
 
     </p>
     <h2>My Hobbies</h2>
     <ul>
-        <li>Playing video games</li>
-        <li>Reading books</li>
-        <li>Throwing yoyos</li>
-        <li>Collecting Transformers</li>
-        <li>Tocar la guitarra</li>
+        <li> <a href="games.html"></a> Video games</li>
+        <li> <a href="books.html"></a>Reading books</li>
+        <li> <a href="yoyos.html"></a>Throwing yoyos</li>
+        <li> <a href="transformers.html"></a>Collecting Transformers</li>
+        <li> <a href="guitar.html"></a>Tocar la guitarra</li>
     </ul>
     
 </body>
