--- a/books.html
+++ b/books.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Jared Is Cool</title>
+<link rel="stylesheet" href="style.css">
 
+</head>
+<body>
+<h1>Books I like</h1>
+
+
+
+
+    
+</body>
 
 
 
