--- a/yoyos.html
+++ b/yoyos.html
@@ -2,9 +2,18 @@
 <html>
 <head>
 <title>Jared Is Cool</title>
+<link rel="stylesheet" href="style.css">
 
 </head>
+<body>
+<h1>I Like Yoyos!</h1>
 
+
+
+
+
+    
+</body>
 
 
 
