--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </p>
     <h2>My Hobbies</h2>
     <ul>
-        <li> <a href="games.html"></a> Video games</li>
-        <li> <a href="books.html"></a>Reading books</li>
-        <li> <a href="yoyos.html"></a>Throwing yoyos</li>
-        <li> <a href="transformers.html"></a>Collecting Transformers</li>
-        <li> <a href="guitar.html"></a>Tocar la guitarra</li>
+        <li> <a href="games.html">Video games</a></li>
+        <li> <a href="books.html">Reading books</a></li>
+        <li> <a href="yoyos.html">Throwing yoyos</a></li>
+        <li> <a href="transformers.html">Collecting Transformers</a></li>
+        <li> <a href="guitar.html">Tocar la guitarra</a></li>
     </ul>
     
 </body>
