--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Jared Is Super Rad!</h1>
     <h2>About Me:</h2>
-    <p>I am Jared Martin. I am a Senior at Flour Bluff High School. My address is [REDACTED]. My debit card number is [REDACTED]. My social security number is [REDACTED].   
+    <p>I am Jared Martin. I am a Senior at Flour Bluff High School. My address is [REDACTED]. My debit card number is [REDACTED]. My social security number is [REDACTED]. I have lots of hobbies, and I   
 
     </p>
     <h2>My Hobbies</h2>
@@ -18,7 +18,7 @@
         <li> <a href="books.html">Reading books</a></li>
         <li> <a href="yoyos.html">Throwing yoyos</a></li>
         <li> <a href="transformers.html">Collecting Transformers</a></li>
-        <li> <a href="guitar.html">Tocar la guitarra</a></li>
+        <li> <a href="guitar.html">LEGO</a></li>
     </ul>
     
 </body>
