--- a/games.html
+++ b/games.html
@@ -7,6 +7,15 @@
 </head>
 <body>
 <h1>Games I like</h1>
+<h2 id="mheader">My Top 5 Games</h2>
+<ol id="gamelist">
+    <li id="gamelist" style="display:inline">Skyrim</li>
+    <li id="gamelist" style="display:inline">Oblivion</li>
+    <li id="gamelist" style="display:inline">Fallout 4</li>
+    <li id="gamelist" style="display:inline">GTA V</li>
+    <li id="gamelist" style="display:inline">Kerbal Space Program</li>
+
+</ol>
 
 
 
