--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <body>
     <h1>Jared Is Super Rad!</h1>
-    <h2>About Me:</h2>
-    <p>I am Jared Martin. I am a Senior at Flour Bluff High School. My address is [REDACTED]. My debit card number is [REDACTED]. My social security number is [REDACTED]. I have lots of hobbies, and I   
+    <h2 id="mheader">About Me:</h2>
+    <p id="mpar">I am Jared Martin. I am a Senior at Flour Bluff High School. My address is [REDACTED]. My debit card number is [REDACTED]. My social security number is [REDACTED]. I have lots of hobbies, and I enjoy being alive. Read my page to learn some more about me!   
 
     </p>
-    <h2>My Hobbies</h2>
+    <h2 id="mheader">My Hobbies</h2>
     <ul>
         <li> <a href="games.html">Video games</a></li>
         <li> <a href="books.html">Reading books</a></li>
