--- a/games.html
+++ b/games.html
@@ -9,13 +9,15 @@
 <h1>Games I like</h1>
 <h2 id="mheader">My Top 5 Games</h2>
 <ol id="gamelist">
-    <li id="gamelist" style="display:inline"><a href="https://en.wikipedia.org/wiki/The_Elder_Scrolls_V:_Skyrim"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/15/The_Elder_Scrolls_V_Skyrim_cover.png/220px-The_Elder_Scrolls_V_Skyrim_cover.png" ></a></li>
-    <li id="gamelist" style="display:inline"><a href="https://en.wikipedia.org/wiki/The_Elder_Scrolls_IV:_Oblivion"><img src="https://static.wikia.nocookie.net/elderscrolls/images/e/e1/Oblivion_Cover.png/revision/latest/scale-to-width-down/350?cb=20160815160654"></a></li>
-    <li id="gamelist" style="display:inline"><a href="https://en.wikipedia.org/wiki/Fallout_4"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/70/Fallout_4_cover_art.jpg/220px-Fallout_4_cover_art.jpg"></a></li>
-    <li id="gamelist" style="display:inline"><a href="https://en.wikipedia.org/wiki/Grand_Theft_Auto_V"><img src="https://media.rockstargames.com/rockstargames/img/global/news/upload/actual_1364906194.jpg"></a></li>
-    <li id="gamelist" style="display:inline"><a href="https://en.wikipedia.org/wiki/Kerbal_Space_Program"><img src="https://www.mobygames.com/images/covers/l/363188-kerbal-space-program-xbox-one-front-cover.png"></a></li>
+    <li id="gi"  style="display:inline"><a href="https://en.wikipedia.org/wiki/The_Elder_Scrolls_V:_Skyrim"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/15/The_Elder_Scrolls_V_Skyrim_cover.png/220px-The_Elder_Scrolls_V_Skyrim_cover.png" ></a></li>
+    <li id="gi"  style="display:inline"><a href="https://en.wikipedia.org/wiki/The_Elder_Scrolls_IV:_Oblivion"><img src="https://static.wikia.nocookie.net/elderscrolls/images/e/e1/Oblivion_Cover.png/revision/latest/scale-to-width-down/350?cb=20160815160654"></a></li>
+    <li id="gi"  style="display:inline"><a href="https://en.wikipedia.org/wiki/Fallout_4"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/70/Fallout_4_cover_art.jpg/220px-Fallout_4_cover_art.jpg"></a></li>
+    <li id="gi"  style="display:inline"><a href="https://en.wikipedia.org/wiki/Grand_Theft_Auto_V"><img src="https://media.rockstargames.com/rockstargames/img/global/news/upload/actual_1364906194.jpg"></a></li>
+    <li id="gi"  style="display:inline"><a href="https://en.wikipedia.org/wiki/Kerbal_Space_Program"><img src="https://www.mobygames.com/images/covers/l/363188-kerbal-space-program-xbox-one-front-cover.png"></a></li>
 
 </ol>
+
+<a href="index.html">Return to home</a>
 
 
 
